--- a/app/views/game/score.html.erb
+++ b/app/views/game/score.html.erb
@@ -2,3 +2,5 @@
 <p><%= params[:word] %> the words exist?: <%= @word["found"] %></p>
 <p>SCORE: <%= @result[:score] %></p>
 <p><%= @result[:message] %></p>
+
+<%= link_to 'new game', :new %>
