--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -1,3 +1,38 @@
 // Place all the styles related to the game controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+ul {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+}
+
+h1 {
+  text-align: center;
+}
+
+li {
+    background-color: #7676ff;
+    padding: 20px;
+    margin: 20px;
+    border-radius: 5px;
+}
+
+form {
+  text-align: center;
+}
+.put-text {
+  padding: 15px 200px;
+  font-size: 20px;
+  text-align: center;
+}
+ .btn {
+  padding: 20px 20px;
+  border: 1px solid;
+  background-color: #58e833;
+  color: white;
+ }
+
+ p {
+  text-align: center;
+ }
