--- a/app/views/game/new.html.erb
+++ b/app/views/game/new.html.erb
@@ -7,6 +7,6 @@
 <form action="/score" method="post">
   <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <%= hidden_field_tag 'letters', @new_letters %>
-  <input type="text" placeholder="Your word" name="word">
-  <input type="submit">
+  <input type="text" placeholder="Your word" name="word" class="put-text">
+  <input type="submit" class="btn">
 </form>
